--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Garima-tata.github.io/Text-IT",
+  "homepage": "https://garima-tata.github.io/Text-IT",
   "name": "lesson1",
   "version": "0.1.0",
   "private": true,
